# Shatra

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  implementation_plan.md  logic.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt
Frontend/: Board.html  lobby.html  lobby.js  page_where_create_room.html  page_where_create_room.js  script.js  style.css
alembic/: env.py
backend/: ai.py  ai_client.py  ai_geometry.py  ai_trained.py  ai_weights.py  board_utils.py  chat.py  config.py  game_archive.py  game_finish.py  game_helpers.py  game_session.py  game_state.py  message_codes.py  models.py  player_identity.py  presence.py  rate_limit.py  room_manager.py  schemas.py  state.py  timers.py  ws_control_handlers.py  ws_manager.py
crates/shatra-engine/: Cargo.toml
crates/shatra-engine/src/: error.rs  lib.rs  types.rs
crates/shatra-engine/src/rules/: board.rs  dict.rs  domain.rs  endgame.rs  hints.rs  message_codes.rs  mod.rs  moves.rs  pieces.rs
crates/shatra-engine/src/search/: eval.rs  geometry.rs  legal.rs  minimax.rs  mod.rs  state.rs  util.rs  weights.rs
crates/shatra-engine/tests/: contract.rs
data/: ai_trained_weights.after_3h_stop.json  ai_trained_weights.before_3h.json  ai_trained_weights.before_6h.json  ai_trained_weights.smoke.json
docs/: DEPLOY.md  ELO.md  MONITORING.md  SOUNDS.md  alt-translation-template.md
frontend/: eslint.config.js  (+5 more)
services/shatra-ai/: Cargo.toml  Dockerfile  README.md  build.rs
services/shatra-ai/src/: grpc_impl.rs  health.rs  main.rs  worker.rs
(+505 files in other folders)
