[package]
name = "shatra-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "shatra_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"

[[test]]
name = "contract"
path = "tests/contract.rs"
