[package]
name = "shatra-ai"
version.workspace = true
edition.workspace = true

[dependencies]
shatra-engine = { path = "../../crates/shatra-engine" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"
